[tool.poetry]
name = "Qonto Skill Test"
version = "0.1.0"
description = ""
authors = ["Yangfan XIANG <yangfan.xiang@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.7"
elasticsearch = "^7.15.2"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
